<resources>
    <string name="app_name">Pocelist</string>
    <string name="pocemon_avatar">аватар покемона</string>
    <string name="info_pocemon">Информация о покемоне</string>
    <string name="height_title">Рост:</string>
    <string name="weight_title">Вес:</string>
    <string name="types_title">Типы:</string>
    <string name="abilities_title">Способности:</string>
    <string name="art_work_pocemon">Ресунок покемона</string>
    <string name="not_found">Ничего не найдено.</string>
    <string name="connecion_error">Ошибка соединения.</string>
</resources>